--- a/expense_tracker_project/expenses/templates/expenses/includes/navbar.html
+++ b/expense_tracker_project/expenses/templates/expenses/includes/navbar.html
@@ -15,9 +15,8 @@
           <li class="nav-item"><a class="nav-link" href="{% url 'expenses:expense_list' %}">Expenses</a></li>
           <li class="nav-item"><a class="nav-link" href="{% url 'expenses:add_expense' %}">Add Expense</a></li>
           <li class="nav-item"><a class="nav-link" href="{% url 'expenses:category_list' %}">Categories</a></li>
-          <li class="nav-item"><a class="nav-link" href="{% url 'expenses:logout' %}">Logout</a></li>
+          <li class="nav-item"><a class="nav-link" href="{% url 'expenses:logout_confirm' %}">Logout</a></li>
         {% else %}
-          <li class="nav-item"><a class="nav-link" href="{% url 'expenses:login' %}">Login</a></li>
           <li class="nav-item"><a class="nav-link" href="{% url 'expenses:register' %}">Register</a></li>
         {% endif %}
       </ul>
